clang/test/BSC/Negative/Ownership/RuleCheck/param-or-var2/param-or-var2.cbs
// RUN: %clang_cc1 -verify %s

void func8(int a) {}

void func9(int _Owned * a) {} // expected-error {{type of 'int' cannot be qualified by '_Owned'}}

void func10(int * _Owned * a) {}

void func11(int * _Owned a) {
	int * b = __move_to_raw(a);
}

void func12(int * _Owned a) {
	int * b = __move_to_raw(a);
}

int main() {
	return 0;
}